<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_autoFinish">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_autoFinishAfterFreeze"
            android:summary="@string/summary_autoFinishAfterFreeze"
            android:title="@string/title_autoFinishAfterFreeze" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_autoFinishAfterLaunch"
            android:summary="@string/summary_autoFinishAfterLaunch"
            android:title="@string/title_autoFinishAfterLaunch" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_showEasyFreeze">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_showEasyFreezeInDetail"
            android:summary="@string/summary_showEasyFreezeInDetail"
            android:title="@string/summary_showEasyFreezeInDetail" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_showEasyFreezeInNotify"
            android:summary="@string/summary_showEasyFreezeInNotify"
            android:title="@string/title_showEasyFreezeInNotify" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_advancedSettings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_showManualDisabledApp"
            android:summary="@string/summary_showManualDisabledApp"
            android:title="@string/summary_showManualDisabledApp" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_showSysApp"
            android:summary="@string/summary_showSysApp"
            android:title="@string/summary_showSysApp" />
    </PreferenceCategory>

</PreferenceScreen>